deployment-es.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service-elasticsearch
spec:
  clusterIP: None  # Headless Service (requerido para StatefulSet)
  selector:
    app: search-service-elasticsearch
  ports:
    - port: 9200
      targetPort: 9200

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: search-service-elasticsearch
spec:
  serviceName: search-service-elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: search-service-elasticsearch
  template:
    metadata:
      labels:
        app: search-service-elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.14.0
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: es-data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: es-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
