deployment-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: NodePort
  selector:
    app: search-service
  ports:
    - port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
      - name: search-service
        image: janjorquera/search-service:latest
        ports:
        - containerPort: 8000
