search-service-manifests.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-service-ingress
spec:
  tls:
  - hosts:
    - searchservice.inf326.nursoft.dev
    secretName: search-service-tls
  ingressClassName: nginx
  rules:
  - host: searchservice.inf326.nursoft.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: search-service
              port:
                number: 8000
